@@ -1,3 +1,15 @@
+1999-05-25  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
+
+	* grub/main.c: Replace OPT_DISABLE_CONFIG_FILE and
+	OPT_DISABLE_CURSES with OPT_NO_CONFIG_FILE and OPT_NO_CURSES
+	respectively.
+	(longopts): Rename from "disable-config-file" to
+	"no-config-file", and from "disable-curses" to "no-curses".
+	(usage): Use "grub" instead of ARGV[0], read the standards.
+	Change the help message according to the changes above.
+	(main): Handle OPT_NO_CONFIG_FILE and OPT_NO_CURSES, instead
+	of OPT_DISABLE_CONFIG_FILE and OPT_DISABLE_CURSES.
+	
 1999-05-21  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
 
 	* docs/TODO: Moved to ...
